--- a/themes/default/htdocs/css/print.css
+++ b/themes/default/htdocs/css/print.css
@@ -1,1 +1,7 @@
-#fnsearch, #sitelogin, #footer, #fncontentOwner, #fnmainNavigation { display: none; }
+#fnsearch, 
+#sitelogin, 
+#footer, 
+#fncontentOwner, 
+#fnmainNavigation { 
+	display: none; 
+}
