--- a/themes/default/htdocs/css/timeline.css
+++ b/themes/default/htdocs/css/timeline.css
@@ -1,160 +1,175 @@
 h2 {
-background: none repeat scroll 0 0 #FFFFFF;
+  background: none repeat scroll 0 0 #FFFFFF
 }
 
 li.timeline_event {
-    position: relative;
-    padding: 2px;
-    padding-left: 36px;
-    min-height: 28px;
+  position: relative;
+  padding: 2px;
+  padding-left: 36px;
+  min-height: 28px;
 }
 
 li.timeline_event .icon {
-    position:absolute;
-    top: 10px;
-    left: 0;
-    background: url(../images/activity_icons.png) no-repeat;
-    width: 24px;
-    height: 24px;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  background: url(../images/activity_icons.png) no-repeat;
+  width: 24px;
+  height: 24px;
 }
 
 li.timeline_event .ga_icon {
-    position:absolute;
-    top: 10px;
-    left: 0;
-    padding-top: 2px;
-    max-height: 24px;
-    max-width: 24px;
-    border:none;
-    display:inline;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  padding-top: 2px;
+  max-height: 24px;
+  max-width: 24px;
+  border: none;
+  display: inline;
 }
 
 .resource-box li.timeline_event a {
-    display:inline;
+  display: inline
 }
+
 .timeline_event .event {
-    margin-top:3px;
+  margin-top: 3px
 }
 
 .resource-box li.rss_separator {
+
 }
 
 .resource-box li.no_rss_separator {
-    border-top-style: none
+  border-top-style: none
 }
 
 /* Sprite background positions */
+
 #global_events_list dl dt.attachment,
 li.timeline_event.attachment .icon {
-    background-position: 0 0;
+  background-position: 0 0
 }
+
 #global_events_list dl dt.changeset,
 li.timeline_event.changeset .icon {
-    background-position: 0 -25px;
+  background-position: 0 -25px
 }
+
 #global_events_list dl dt.closedticket,
 li.timeline_event.closedticket .icon {
-    background-position: 0 -50px;
+  background-position: 0 -50px
 }
+
 #global_events_list dl dt.milestone,
 li.timeline_event.milestone .icon {
-    background-position: 0 -75px;
+  background-position: 0 -75px
 }
+
 #global_events_list dl dt.newforum,
-li.timeline_event.newforum .icon{
-    background-position: 0 -100px;
+li.timeline_event.newforum .icon {
+  background-position: 0 -100px
 }
+
 #global_events_list dl dt.newmessage,
 li.timeline_event.newmessage .icon {
-    background-position: 0 -125px;
+  background-position: 0 -125px
 }
+
 #global_events_list dl dt.newticket,
 #global_events_list dl dt.reopenedticket,
 #global_events_list dl dt.newdownload,
 li.timeline_event.newticket .icon,
 li.timeline_event.reopenedticket .icon,
-li.timeline_event.newdownload .icon
-{
-    background-position: 0 -150px;
+li.timeline_event.newdownload .icon {
+  background-position: 0 -150px
 }
+
 #global_events_list dl dt.newtopic,
 li.timeline_event.newtopic .icon {
-    background-position: 0 -175px;
+  background-position: 0 -175px
 }
+
 #global_events_list dl dt.wiki,
 li.timeline_event.wiki .icon {
-    background-position: 0 -200px;
+  background-position: 0 -200px
 }
+
 #global_events_list dl dt.filesevent-add,
-li.timeline_event.filesevent-add .icon{
-    background-position: 0 -225px;
+li.timeline_event.filesevent-add .icon {
+  background-position: 0 -225px
 }
+
 #global_events_list dl dt.filesevent-mv,
 #global_events_list dl dt.downloadsevent-mv,
 li.timeline_event.filesevent-mv .icon,
 li.timeline_event.downloadsevent-mv .icon {
-    background-position: 0 -250px;
+  background-position: 0 -250px
 }
+
 #global_events_list dl dt.filesevent-cp,
 #global_events_list dl dt.downloadsevent-cp,
 li.timeline_event.filesevent-cp .icon,
 li.timeline_event.downloadsevent-cp .icon {
-    background-position: 0 -250px;
+  background-position: 0 -250px
 }
+
 #global_events_list dl dt.filesevent-rm,
 #global_events_list dl dt.downloadsevent-rm,
 li.timeline_event.filesevent-rm .icon,
 li.timeline_event.downloadsevent-rm .icon {
-    background-position: 0 -275px;
+  background-position: 0 -275px
 }
 
 #global_events_list dl dt.rss,
 li.timeline_event.rss .icon {
-    background-position: 0 -300px;
+  background-position: 0 -300px
 }
+
 #global_events_list dl dt.downloadsevent-add,
 li.timeline_event.downloadsevent-add .icon {
-    background-position: 0 -325px;
+  background-position: 0 -325px
 }
 
 #global_events_list dl dt {
-    background: url(../images/activity_icons.png) no-repeat;
-    width: 100%;
-    height: 24px;
-    padding: 0 0 0 36px;
+  background: url(../images/activity_icons.png) no-repeat;
+  width: 100%;
+  height: 24px;
+  padding: 0 0 0 36px;
 }
 
 #global_events_list dl {
-    border-top: 1px solid #EBEBEB;
-    padding-top: 10px;
+  border-top: 1px solid #EBEBEB;
+  padding-top: 10px;
 }
 
 #global_events_list {
-  margin-top:30px;
+  margin-top: 30px;
   font-size: 11px;
 }
 
 #global_events_list .event_page {
-  display:none;
+  display: none
 }
 
 #global_events_list .event_page.active {
-  display:block;
+  display: block
 }
 
 #global_events_list dd {
-    color: #222222;
-    margin-bottom: 10px;
-    margin-top: -6px;
-    padding: 0 0 15px 36px;
-    border-bottom: 1px solid #EBEBEB;
+  color: #222222;
+  margin-bottom: 10px;
+  margin-top: -6px;
+  padding: 0 0 15px 36px;
+  border-bottom: 1px solid #EBEBEB;
 }
 
 #global_events_list dd a {
-    color: #222222;
+  color: #222222
 }
 
 .events_pagination {
-  margin:15px 0;
-  color:#EDEDEB;
+  margin: 15px 0;
+  color: #EDEDEB;
 }
