Added empty field so that the form token remains even though adding categories is disabled.

--- a/plugins/multiproject/multiproject/project/admin/templates/admin_categories.html
+++ b/plugins/multiproject/multiproject/project/admin/templates/admin_categories.html
@@ -20,6 +20,10 @@ from multiproject.core.configuration import conf
   </head>
 
   <body>
+    <div>
+        <form action="" enctype="multipart/form-data" method="post">
+        </form>
+    </div>
     <h2>Categorization</h2>
     <div class="categories">
       <py:with vars="first=True">
