--- a/themes/default/templates/browser.html
+++ b/themes/default/templates/browser.html
@@ -138,8 +138,8 @@
       <!-- Url to show -->
       <span class="urlToClipboard">
         <span class="secondaryButton flippedButton" id="clipbutton">Copy to clipboard</span>
-        <!--! Always at first show first protocol -->
-        <span class="ltgreyfield blueitalic" id="repoaddress">${co_commands[schemes[0]]}</span>
+        <!--! Always at first show first supported protocol -->
+        <span class="ltgreyfield blueitalic" id="repoaddress">${co_commands[schemes[1]]}</span>
       </span>
 	</div>
 
