--- a/plugins/multiproject/multiproject/home/frontpage/templates/myprojects.html
+++ b/plugins/multiproject/multiproject/home/frontpage/templates/myprojects.html
@@ -116,8 +116,8 @@
     <div class="halfWidth left last">
         <div class="resource-box">
 			<py:if test="not userpage">
-			<h2 class="resources-title"><a href="${req.base_path}/prefs/following" id="following_settings_button">Following</a> <span class="editButton">
-                <a href="${req.base_path}/watchlist_timeline" id="watchlist_timeline_button">Timeline</a></span></h2>
+			<h2 class="resources-title">Following<span class="editButton"><a href="${req.base_path}/watchlist_timeline" id="watchlist_timeline_button">Timeline</a></span></h2>
+            <a href="${req.base_path}/prefs/following" id="following_settings_button">View all</a>
 			<ul>
 	        ${list_watchlist_events(watchlist)}
 	        </ul>
